--- a/multiproject/src/main/resources/application.properties
+++ b/multiproject/src/main/resources/application.properties
@@ -1,11 +1,21 @@
+#port
 server.port=8081
+
+# java ë³ê²½ ì¬ìì
+spring.devtools.restart.enabled=false
+# jsp ë³ê²½ ì¬ìì
+spring.devtools.livereload.enabled=true
+
+
+#mybatis ì¶ê° ì¤ì 
+# 1.datasource ì¤ì 
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/employeesdb
+spring.datasource.username=root
+spring.datasource.password=1234
 
 spring.mvc.view.prefix=/WEB-INF/views/
 spring.mvc.view.suffix=.jsp
 
-spring.devtools.restart.enabled=true
-
-spring.devtools.livereload.enabled=true
-
-
-
+#2.config 설정
+mybatis.config-location=classpath:mybatis/config.xml
