--- a/multiproject/src/main/resources/application.properties
+++ b/multiproject/src/main/resources/application.properties
@@ -1,21 +1,30 @@
-#port
-server.port=8081
+server.port=8080
 
-# java ë³ê²½ ì¬ìì
-spring.devtools.restart.enabled=false
-# jsp ë³ê²½ ì¬ìì
+spring.mvc.view.prefix=/WEB-INF/views/
+spring.mvc.view.suffix=.jsp
+
+spring.devtools.restart.enabled=true
+
 spring.devtools.livereload.enabled=true
 
 
-#mybatis ì¶ê° ì¤ì 
-# 1.datasource ì¤ì 
+spring.servlet.multipart.max-file-size=50MB
+spring.servlet.multipart.max-request-size=50MB
+
+#네이버서버
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#spring.datasource.url=jdbc:mysql://49.50.173.37:3306/employeesdb
+#spring.datasource.username=emp
+#spring.datasource.password=Emp_1234
+
+#로컬서버
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://127.0.0.1:3306/employeesdb
 spring.datasource.username=root
 spring.datasource.password=1234
 
-spring.mvc.view.prefix=/WEB-INF/views/
-spring.mvc.view.suffix=.jsp
-
 #2.config 설정
-mybatis.config-location=classpath:mybatis/config.xml
+mybatis.config-location=classpath:mybatis/mybatis-config.xml
+
+#3.mapper 설정
+mybatis.mapper-locations=classpath:mybatis/mappers/*-mapping.xml
